--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "@vercel/analytics": "^1.0.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "prisma": "^5.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   }
 }
