--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.15",
     "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.27",
     "prisma": "^5.0.0",
     "tailwindcss": "^3.3.3",
