--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.4",
     "@vercel/analytics": "^1.0.1",
     "aws-sdk": "^2.1424.0",
     "eslint": "8.45.0",
