--- a/package.json
+++ b/package.json
@@ -12,17 +12,24 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.0.0",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.4",
     "@vercel/analytics": "^1.0.1",
     "aws-sdk": "^2.1424.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "fs": "^0.0.1-security",
+    "lucide-react": "^0.263.1",
     "next": "13.4.10",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.2.0"
+    "swr": "^2.2.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@types/node": "^20.4.2",
