--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-navigation-menu": "^1.1.3",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.4",
-    "@vercel/analytics": "^1.0.1",
-    "aws-sdk": "^2.1424.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.45.0",
@@ -27,12 +24,11 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.8",
     "@types/react": "^18.2.15",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
