--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.2",
-    "@clerk/themes": "^1.7.5",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.0.0",
@@ -36,6 +34,7 @@
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.27",
     "prisma": "^5.0.0",
+    "supabase": "^1.83.7",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   }
