--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@supabase/supabase-js": "^2.32.0",
     "@vercel/analytics": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -43,6 +44,7 @@
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.15",
     "autoprefixer": "^10.4.14",
+    "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.27",
     "prisma": "^5.0.0",
