--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -67,7 +67,7 @@ enable_signup = true
 # addresses. If disabled, only the new email is required to confirm.
 double_confirm_changes = true
 # If enabled, users need to confirm their email address before signing in.
-enable_confirmations = false
+enable_confirmations = true
 
 [auth.sms]
 # Allow/disallow new user signups via SMS to your project.
@@ -98,7 +98,7 @@ redirect_uri = ""
 url = ""
 
 [analytics]
-enabled = false
+enabled = true
 port = 54327
 vector_port = 54328
 # Configure one of the supported backends: `postgres`, `bigquery`
