--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
-    "build": "prisma generate && next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,7 +12,6 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.2.0",
-    "@prisma/client": "^5.0.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -50,7 +49,6 @@
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.27",
-    "prisma": "^5.0.0",
     "supabase": "^1.83.7",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
