--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.16",
-    "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.2.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
@@ -19,6 +17,8 @@
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
@@ -29,12 +29,10 @@
     "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "fs": "^0.0.1-security",
     "lucide-react": "^0.263.1",
     "next": "13.4.10",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-datetime-picker": "^5.5.1",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
@@ -49,7 +47,7 @@
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.27",
-    "supabase": "^1.83.7",
+    "supabase": "^1.88.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   }
