--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.45.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
+    "unique-names-generator": "^4.7.1",
     "zod": "^3.22.0"
   },
   "devDependencies": {
