--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.32.0",
+    "@tanstack/react-query": "^4.33.0",
+    "@trpc/client": "^10.38.1",
+    "@trpc/react-query": "^10.38.1",
+    "@trpc/server": "^10.38.1",
     "@vercel/analytics": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
