--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "unique-names-generator": "^4.7.1",
+    "viem": "^1.10.14",
+    "wagmi": "^1.4.2",
     "zod": "^3.22.0"
   },
   "devDependencies": {
