--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
+    "eslint-config-next": "^13.5.1",
     "lucide-react": "^0.263.1",
-    "next": "13.4.10",
+    "next": "^13.5.1",
     "next-themes": "^0.2.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
