--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.45.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
+    "trpc-panel": "^1.3.4",
     "unique-names-generator": "^4.7.1",
     "viem": "^1.10.14",
     "wagmi": "^1.4.2",
