--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,7 @@
       "@/*": ["./*"]
     },
     "target": "es6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true, // true required for zod
@@ -49,8 +45,12 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-, "tailwind.config.js", "postcss.config.js", "next.config.js"  ],
+    ".next/types/**/*.ts",
+    "tailwind.config.js",
+    "postcss.config.js",
+    "next.config.js",
+    "scripts/metadata.js"
+  ],
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
