--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "^13.5.1",
+    "ethers": "^6.7.1",
     "lucide-react": "^0.263.1",
     "next": "^13.5.1",
     "next-themes": "^0.2.1",
