--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "erc721a": "^4.2.3",
     "eslint": "8.45.0",
     "eslint-config-next": "^13.5.1",
     "ethers": "^6.7.1",
