--- a/.github/workflows/check_prettier.yml
+++ b/.github/workflows/check_prettier.yml
@@ -2,7 +2,8 @@ name: Prettier Check
 
 on:
   push:
-    - '*' # matches every branch that doesn't contain a '/'
+    branches:
+      - '*' # matches every branch that doesn't contain a '/'
 
 jobs:
   prettier-check:
