--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "autoprefixer": "^10.4.14",
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "hardhat": "^2.17.3",
     "hardhat-deploy": "^0.11.37",
     "postcss": "^8.4.27",
