--- a/.github/workflows/check_prettier.yml
+++ b/.github/workflows/check_prettier.yml
@@ -1,25 +1,25 @@
-name: Prettier Check
+# name: Prettier Check
 
-on:
-  push:
-    branches:
-      - '*' # matches every branch that doesn't contain a '/'
+# on:
+#   push:
+#     branches:
+#       - '*' # matches every branch that doesn't contain a '/'
 
-jobs:
-  prettier-check:
-    runs-on: ubuntu-latest
+# jobs:
+#   prettier-check:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 16.x
 
-      - name: Install Dependencies
-        run: npm install
+#       - name: Install Dependencies
+#         run: npm install
 
-      - name: Prettier Check
-        run: npm run prettier:check
+#       - name: Prettier Check
+#         run: npm run prettier:check
