--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,19 +1,31 @@
 {
   "name": "mobile",
   "version": "1.0.0",
-  "main": "index.tsx",
+  "main": "app/index.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "dev": "expo start --ios"
+    "dev": "expo start"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.40.0",
+    "@trpc/react-query": "^10.40.0",
+    "api": "*",
+    "autoprefixer": "^10.4.16",
     "expo": "~49.0.13",
+    "expo-image": "~1.3.4",
+    "expo-router": "^2.0.9",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "2.0.5",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.3.3",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "superjson": "1.13.1",
+    "tailwindcss": "3.3.2",
     "uuid": "3.4.0"
   },
   "devDependencies": {
