--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "prettier:check": "prettier . --check"
   },
   "dependencies": {
+    "api": "*",
     "@hookform/resolvers": "^3.2.0",
     "@openzeppelin/contracts": "^4.9.3",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -33,9 +34,8 @@
     "@supabase/supabase-js": "^2.32.0",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-table": "^8.9.7",
-    "@trpc/client": "^10.38.1",
-    "@trpc/react-query": "^10.38.1",
-    "@trpc/server": "^10.38.1",
+    "@trpc/client": "^10.40.0",
+    "@trpc/react-query": "^10.40.0",
     "@vercel/analytics": "^1.0.2",
     "alchemy-sdk": "^2.10.1",
     "class-variance-authority": "^0.7.0",
@@ -55,6 +55,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "sharp": "^0.32.6",
+    "superjson": "1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "trpc-panel": "^1.3.4",
@@ -77,7 +78,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "supabase": "^1.88.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.6"
   }
 }
