--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mobile",
   "version": "1.0.0",
-  "main": "app/index.tsx",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,20 +10,26 @@
     "dev": "expo start"
   },
   "dependencies": {
+    "@rneui/themed": "^4.0.0-rc.8",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.40.0",
     "@trpc/react-query": "^10.40.0",
     "api": "*",
     "autoprefixer": "^10.4.16",
     "expo": "~49.0.13",
+    "expo-constants": "~14.4.2",
     "expo-image": "~1.3.4",
-    "expo-router": "^2.0.9",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "2.0.5",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.3.3",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "superjson": "1.13.1",
     "tailwindcss": "3.3.2",
     "uuid": "3.4.0"
