--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -35,7 +35,15 @@
       }
     },
     "plugins": [
-      "expo-router"
+      [
+        "expo-router"
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
+        }
+      ]
     ]
   }
 }
