--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,8 +15,11 @@
     "@trpc/client": "^10.40.0",
     "@trpc/react-query": "^10.40.0",
     "api": "*",
+    "supabase": "*",
     "autoprefixer": "^10.4.16",
     "expo": "~49.0.13",
+    "expo-barcode-scanner": "^12.7.0",
+    "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "expo-image": "~1.3.4",
     "expo-linking": "~5.0.2",
@@ -32,7 +35,8 @@
     "react-native-screens": "~3.22.0",
     "superjson": "1.13.1",
     "tailwindcss": "3.3.2",
-    "uuid": "3.4.0"
+    "uuid": "3.4.0",
+    "expo-crypto": "~12.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
