--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,20 +10,23 @@
     "dev": "expo start"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.38.3",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.40.0",
     "@trpc/react-query": "^10.40.0",
     "api": "*",
-    "supabase": "*",
     "autoprefixer": "^10.4.16",
     "expo": "~49.0.13",
     "expo-barcode-scanner": "^12.7.0",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
     "expo-image": "~1.3.4",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
+    "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "2.0.5",
     "postcss": "^8.4.23",
@@ -33,10 +36,11 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "supabase": "*",
     "superjson": "1.13.1",
     "tailwindcss": "3.3.2",
-    "uuid": "3.4.0",
-    "expo-crypto": "~12.4.1"
+    "uuid": "3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
