--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.32.0",
@@ -47,6 +48,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "^13.5.1",
     "ethers": "^6.7.1",
+    "geist": "^1.0.0",
     "lucide-react": "^0.263.1",
     "next": "^13.5.1",
     "next-themes": "^0.2.1",
@@ -54,6 +56,7 @@
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-qr-code": "^2.0.12",
     "sharp": "^0.32.6",
     "supabase": "*",
     "superjson": "1.13.1",
