--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,8 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.10",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.32.0",
     "@tanstack/react-query": "^4.33.0",
@@ -50,7 +52,7 @@
     "ethers": "^6.7.1",
     "geist": "^1.0.0",
     "lucide-react": "^0.263.1",
-    "next": "^13.5.1",
+    "next": "^14.0.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
@@ -58,6 +60,7 @@
     "react-hook-form": "^7.45.4",
     "react-qr-code": "^2.0.12",
     "sharp": "^0.32.6",
+    "stripe": "^14.2.0",
     "supabase": "*",
     "superjson": "1.13.1",
     "tailwind-merge": "^1.14.0",
@@ -69,15 +72,12 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.15",
     "autoprefixer": "^10.4.14",
     "encoding": "^0.1.13",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "hardhat": "^2.17.3",
-    "hardhat-deploy": "^0.11.37",
     "postcss": "^8.4.27",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
