--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "stripe": "stripe listen --forward-to localhost:3000/api/stripe_webhook",
+    "stripe": "stripe listen --forward-to localhost:3000/api/stripe-webhook",
     "update-types": "npx supabase gen types typescript --local > database.types.ts",
     "prettier:check": "prettier . --check"
   },
