auth and refactor

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "^10.40.0",
     "api": "*",
     "autoprefixer": "^10.4.16",
+    "css-tree": "^2.3.1",
     "expo": "~49.0.13",
     "expo-barcode-scanner": "^12.7.0",
     "expo-camera": "~13.4.4",
@@ -36,7 +37,9 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.14.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-qr-code": "^2.0.12",
     "supabase": "*",
     "superjson": "1.13.1",
     "tailwindcss": "3.3.2",
