--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,8 +10,10 @@
     "dev": "expo start"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@stripe/stripe-react-native": "^0.35.0",
     "@supabase/supabase-js": "^2.38.3",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.40.0",
