--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,8 +40,9 @@
     "@trpc/client": "^10.40.0",
     "@trpc/react-query": "^10.40.0",
     "@vercel/analytics": "^1.0.2",
-    "alchemy-sdk": "^2.10.1",
+    "alchemy-sdk": "^2.12.0",
     "api": "*",
+    "async-retry": "^1.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -56,10 +57,12 @@
     "next": "^14.0.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-aria": "^3.30.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-qr-code": "^2.0.12",
+    "react-stately": "^3.28.0",
     "sharp": "^0.32.6",
     "stripe": "^14.2.0",
     "supabase": "*",
