--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,9 @@
     "prettier:check": "prettier . --check"
   },
   "dependencies": {
+    "@alchemy/aa-accounts": "^1.2.0",
+    "@alchemy/aa-alchemy": "^1.2.0",
+    "@alchemy/aa-core": "^1.2.0",
     "@hookform/resolvers": "^3.2.0",
     "@openzeppelin/contracts": "^4.9.3",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -70,7 +73,7 @@
     "tailwindcss-animate": "^1.0.6",
     "trpc-panel": "^1.3.4",
     "unique-names-generator": "^4.7.1",
-    "viem": "^1.10.14",
+    "viem": "^1.19.11",
     "wagmi": "^1.4.2",
     "zod": "^3.22.0"
   },
