--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,8 @@
     "@tanstack/react-table": "^8.9.7",
     "@trpc/client": "^10.40.0",
     "@trpc/react-query": "^10.40.0",
+    "@upstash/qstash": "^2.3.0",
+    "@upstash/redis": "^1.25.1",
     "alchemy-sdk": "^2.12.0",
     "api": "*",
     "async-retry": "^1.3.3",
@@ -55,6 +57,7 @@
     "eslint-config-next": "^13.5.1",
     "ethers": "^6.7.1",
     "geist": "^1.0.0",
+    "ioredis": "^5.3.2",
     "lucide-react": "^0.263.1",
     "next": "^14.0.1",
     "next-themes": "^0.2.1",
