--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "^13.5.1",
     "ethers": "^6.7.1",
+    "fetch-ponyfill": "^7.1.0",
     "geist": "^1.0.0",
     "ioredis": "^5.3.2",
     "lucide-react": "^0.263.1",
