--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,6 +48,7 @@
     "alchemy-sdk": "^2.12.0",
     "api": "*",
     "async-retry": "^1.3.3",
+    "canvas-confetti": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -63,6 +64,7 @@
     "lucide-react": "^0.263.1",
     "next": "^14.0.1",
     "next-themes": "^0.2.1",
+    "promise": "^8.3.0",
     "react": "^18.2.0",
     "react-aria": "^3.30.0",
     "react-day-picker": "^8.8.0",
@@ -83,6 +85,7 @@
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.15",
     "autoprefixer": "^10.4.14",
