--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "prettier": "latest",
     "turbo": "latest"
+  },
+  "dependencies": {
+    "@supabase/ssr": "^0.0.10",
+    "@supabase/supabase-js": "^2.39.1"
   }
 }
