--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -62,6 +62,7 @@
     "ioredis": "^5.3.2",
     "lucide-react": "^0.263.1",
     "next": "^14.0.1",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "promise": "^8.3.0",
     "react": "^18.2.0",
