--- a/apps/web/public/manifest.json
+++ b/apps/web/public/manifest.json
@@ -8,12 +8,30 @@
     "scope": "/",
     "start_url": "/",
     "icons": [
-      {
-        "src": "ticket.png",
-        "sizes": "48x48",
-        "type": "image/png",
-        "purpose": "maskable any"
-      }
-    ],
+        {
+          "src": "icons/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "any"
+        },
+        {
+          "src": "icons/manifest-icon-192.maskable.png",
+          "sizes": "192x192",
+          "type": "image/png",
+          "purpose": "maskable"
+        },
+        {
+          "src": "icons/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "any"
+        },
+        {
+          "src": "icons/manifest-icon-512.maskable.png",
+          "sizes": "512x512",
+          "type": "image/png",
+          "purpose": "maskable"
+        }
+      ],
     "splash_pages": null
   }
