--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,6 +45,7 @@
     "@upstash/redis": "^1.25.1",
     "@vercel/speed-insights": "^1.0.2",
     "alchemy-sdk": "^2.12.0",
+    "antd": "^5.12.7",
     "api": "*",
     "async-retry": "^1.3.3",
     "canvas-confetti": "^1.9.2",
