--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -13,7 +13,7 @@
     "@expo/html-elements": "^0.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@stripe/stripe-react-native": "^0.35.0",
+    "@stripe/stripe-react-native": "0.28.0",
     "@supabase/supabase-js": "^2.38.3",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.40.0",
@@ -22,26 +22,24 @@
     "autoprefixer": "^10.4.16",
     "css-tree": "^2.3.1",
     "expo": "~49.0.13",
-    "expo-barcode-scanner": "^12.7.0",
-    "expo-blur": "^12.6.0",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-camera": "~13.4.4",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
-    "expo-image": "~1.3.4",
-    "expo-linear-gradient": "~12.3.0",
+    "expo-image": "~1.3.5",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
-    "expo-secure-store": "^12.5.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "nativewind": "2.0.5",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.3.3",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-qr-code": "^2.0.12",
     "supabase": "*",
