--- a/packages/supabase/config.toml
+++ b/packages/supabase/config.toml
@@ -69,6 +69,10 @@ double_confirm_changes = true
 # If enabled, users need to confirm their email address before signing in.
 enable_confirmations = true
 
+[auth.email.template.confirmation]
+subject = "You are invited to Ticketing"
+content_path = "./supabase/templates/confirmation.html"
+
 [auth.sms]
 # Allow/disallow new user signups via SMS to your project.
 enable_signup = true
