new passkey flow

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@alchemy/aa-accounts": "^1.2.0",
     "@alchemy/aa-alchemy": "^1.2.0",
     "@alchemy/aa-core": "^1.2.0",
+    "@devnomic/marquee": "^1.0.1",
     "@hookform/resolvers": "^3.2.0",
     "@openzeppelin/contracts": "^4.9.3",
     "@radix-ui/react-accordion": "^1.1.2",
