--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,6 +20,7 @@
     "@turnkey/api-key-stamper": "^0.3.0",
     "@turnkey/http": "^2.4.2",
     "@turnkey/viem": "^0.4.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "openai": "^4.26.0",
     "stripe": "^14.2.0",
@@ -29,6 +30,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "typescript": "^5.2.2"
   },
   "license": "ISC"
