--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "metadata.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:beforeLoad": "jest beforeLoad.test.js",
+    "test:afterLoad": "jest afterLoad.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +17,8 @@
     "fs": "^0.0.1-security",
     "nft.storage": "^7.1.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
