--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -68,7 +68,7 @@
     "inngest": "^3.16.1",
     "ioredis": "^5.3.2",
     "lucide-react": "^0.263.1",
-    "next": "^14.0.1",
+    "next": "^14.2.2",
     "next-themes": "^0.2.1",
     "promise": "^8.3.0",
     "react": "^18.2.0",
