--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,9 +15,12 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@stripe/stripe-react-native": "0.28.0",
     "@supabase/supabase-js": "^2.38.3",
-    "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.40.0",
-    "@trpc/react-query": "^10.40.0",
+    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.29.2",
+    "@trpc/client": "^11.0.0-rc.346",
+    "@trpc/next": "^11.0.0-rc.346",
+    "@trpc/react-query": "^11.0.0-rc.346",
+    "@trpc/server": "^11.0.0-rc.346",
     "api": "*",
     "autoprefixer": "^10.4.16",
     "css-tree": "^2.3.1",
