--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,9 +12,6 @@
     "prettier:check": "prettier . --check"
   },
   "dependencies": {
-    "@alchemy/aa-accounts": "^1.2.0",
-    "@alchemy/aa-alchemy": "^1.2.0",
-    "@alchemy/aa-core": "^1.2.0",
     "@devnomic/marquee": "^1.0.1",
     "@hookform/resolvers": "^3.2.0",
     "@openzeppelin/contracts": "^4.9.3",
@@ -40,11 +37,17 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.10",
+    "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.32.0",
-    "@tanstack/react-query": "^4.33.0",
+    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.29.2",
     "@tanstack/react-table": "^8.9.7",
-    "@trpc/client": "^10.40.0",
-    "@trpc/react-query": "^10.40.0",
+    "@trpc/client": "^11.0.0-rc.346",
+    "@trpc/next": "^11.0.0-rc.346",
+    "@trpc/react-query": "^11.0.0-rc.346",
+    "@trpc/server": "^11.0.0-rc.346",
+    "@turnkey/http": "^2.10.0",
+    "@turnkey/viem": "^0.4.14",
     "@upstash/qstash": "^2.3.0",
     "@upstash/redis": "^1.25.1",
     "@vercel/analytics": "^1.1.1",
@@ -85,7 +88,6 @@
     "superjson": "1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
-    "trpc-panel": "^1.3.4",
     "unique-names-generator": "^4.7.1",
     "viem": "^1.19.11",
     "wagmi": "^1.4.2",
