--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,8 +15,13 @@
     "@alchemy/aa-accounts": "^1.2.0",
     "@alchemy/aa-alchemy": "^1.2.0",
     "@alchemy/aa-core": "^1.2.0",
-    "@trpc/client": "^10.40.0",
-    "@trpc/server": "^10.40.0",
+    "@supabase/ssr": "^0.3.0",
+    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.29.2",
+    "@trpc/client": "^11.0.0-rc.346",
+    "@trpc/next": "^11.0.0-rc.346",
+    "@trpc/react-query": "^11.0.0-rc.346",
+    "@trpc/server": "^11.0.0-rc.346",
     "@turnkey/api-key-stamper": "^0.3.0",
     "@turnkey/http": "^2.4.2",
     "@turnkey/viem": "^0.4.2",
