--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -15,8 +15,8 @@
     "noEmit": true,
     "noErrorTruncation": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "Preserve",
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
