--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -23,6 +23,7 @@
     "@trpc/server": "^11.0.0-rc.346",
     "api": "*",
     "autoprefixer": "^10.4.16",
+    "css-select": "^5.1.0",
     "css-tree": "^2.3.1",
     "expo": "~49.0.13",
     "expo-barcode-scanner": "~12.5.3",
@@ -37,6 +38,7 @@
     "expo-system-ui": "^2.9.3",
     "nativewind": "2.0.5",
     "postcss": "^8.4.23",
+    "postcss-calc": "^8.2.4",
     "postcss-loader": "^7.3.3",
     "react": "18.2.0",
     "react-native": "0.72.6",
