--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,57 +1,16 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "baseUrl": ".", // this handles the root
     "paths": {
       "@/*": ["./*"]
     },
-    "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true, // true required for zod
-    "noUncheckedIndexedAccess": true,
-    "noImplicitAny": true,
-    "forceConsistentCasingInFileNames": true,
-    "noEmit": true,
-    "noErrorTruncation": true,
-    "esModuleInterop": true,
-    "module": "Preserve",
-    "moduleResolution": "Bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "incremental": true,
-    "strictNullChecks": true, // true required for prisma singleton mock
-    "sourceMap": true,
     "plugins": [
       {
         "name": "next"
       }
     ]
   },
-  "exclude": [
-    "node_modules",
-    "notes",
-    "docs",
-    "dist",
-    ".next",
-    "apps/web/next.config.js",
-    "themes",
-    "tests-e2e"
-  ],
-  "include": [
-    "apps/web/next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "apps/web/tailwind.config.js",
-    "apps/web/postcss.config.js",
-    "apps/web/next.config.js",
-    "scripts/metadata.js"
-  ],
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs"
-    }
-  }
+  "include": ["next-env.d.ts", ".next/types/**/*.ts", "*.ts", "*.mjs", "src"],
+  "exclude": ["node_modules"],
 }
