profile page ui

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,14 +3,25 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"]
+      "~/*": [
+        "./*"
+      ]
     },
     "plugins": [
       {
         "name": "next"
       }
     ],
+    "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", ".next/types/**/*.ts", "*.ts", "*.mjs", "src"],
-  "exclude": ["node_modules"],
+  "include": [
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "*.ts",
+    "*.mjs",
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
