--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "dev": "expo start --reset-cache"
+    "dev": "expo start --reset-cache",
+    "format": "prettier --check . --ignore-path ../../.gitignore"
   },
   "dependencies": {
     "@expo/html-elements": "^0.5.1",
@@ -37,10 +38,12 @@
     "expo-secure-store": "~13.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
+    "lottie-react-native": "6.7.0",
     "nativewind": "2.0.5",
     "postcss": "^8.4.23",
     "postcss-calc": "^8.2.4",
     "postcss-loader": "^7.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-confetti-cannon": "^1.5.2",
@@ -55,8 +58,7 @@
     "superjson": "1.13.1",
     "tailwindcss": "3.3.2",
     "toastify-react-native": "^5.0.0",
-    "uuid": "3.4.0",
-    "lottie-react-native": "6.7.0"
+    "uuid": "3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
